--- a/HACKING
+++ b/HACKING
@@ -1,22 +1,22 @@
 Note that these instructions are *not* necessary for distribution
 tarballs; they have separate configure/build instructions.  
 
-Building this package from CVS is mainly intended for developers.
+Building this package from subversion is mainly intended for developers.
 General users should obtain official distribution packages; both
 source and binary distributions are available at
 http://www.icecast.org/
 
 -----
 
-These are *brief* instructions on how to build this package from CVS.
+These are *brief* instructions on how to build this package from subversion.
 Yes, there are details left out.
 
-There are generally four steps necessary when building from CVS (i.e.,
+There are generally four steps necessary when building from subversion (i.e.,
 a developer's copy):
 
-1. cvs checkout of the sources, or cvs update.  RTFM from your
-   favorite flavor of CVS documentation; information on the xiph.org
-   CVS repository can be found at http://www.xiph.org/cvs.html.
+1. svn checkout of the sources, or svn update.  RTFM from your
+   favorite flavor of svn documentation; information on the xiph.org
+   svn repository can be found at http://www.xiph.org/svn/.
 
 2. [re-]generate files such as "configure" and "Makefile.in" with the
    GNU autoconf/automake tools.  Run the "autogen.sh" script to
@@ -37,7 +37,7 @@ a developer's copy):
 4. Run "make" to build the source.  
 
 In general, steps 2 and 3 need to be re-run every time any of the
-following files are modified (either manually or by a cvs update):
+following files are modified (either manually or by a svn update):
 
 	  configure.in
 	  m4/*
